---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_foreign_table.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_SEGMENT
          IDENT "t"
    TABLE_ARG_LIST
      L_PAREN "("
      R_PAREN ")"
    WHITESPACE "\n  "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_NOT_EXISTS
      IF_KW "if"
      WHITESPACE " "
      NOT_KW "not"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_SEGMENT
          IDENT "t"
    TABLE_ARG_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      COLUMN
        COLUMN_NAME
          IDENT "a"
        WHITESPACE " "
        PATH_TYPE
          PATH_REF
            PATH_SEGMENT_REF
              TEXT_KW "text"
      COMMA ","
      WHITESPACE " \n  "
      COLUMN
        COLUMN_NAME
          IDENT "b"
        WHITESPACE " "
        PATH_TYPE
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "foo"
            DOT "."
            PATH_SEGMENT_REF
              BIGINT_KW "bigint"
        WHITESPACE " \n    "
        ALTER_OPTION_LIST
          OPTIONS_KW "options"
          WHITESPACE " "
          L_PAREN "("
          ADD_FOREIGN_OPTION
            FOREIGN_OPTION_NAME
              IDENT "a"
            WHITESPACE " "
            LITERAL
              STRING "'b'"
          COMMA ","
          WHITESPACE " "
          ADD_FOREIGN_OPTION
            FOREIGN_OPTION_NAME
              IDENT "c"
            WHITESPACE " "
            LITERAL
              STRING "'d'"
          R_PAREN ")"
        WHITESPACE " \n    "
        COLLATE
          COLLATE_KW "collate"
          WHITESPACE " "
          COLLATION_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "\"fr_FR\""
        WHITESPACE "\n    "
        NOT_NULL_CONSTRAINT
          CONSTRAINT_NAME_CLAUSE
            CONSTRAINT_KW "constraint"
            WHITESPACE " "
            CONSTRAINT_NAME
              IDENT "c"
          WHITESPACE "\n    "
          NOT_KW "not"
          WHITESPACE " "
          NULL_KW "null"
        WHITESPACE "\n    "
        NULL_CONSTRAINT
          NULL_KW "null"
        WHITESPACE "\n    "
        CHECK_CONSTRAINT
          CHECK_KW "check"
          WHITESPACE " "
          L_PAREN "("
          BIN_EXPR
            NAME_REF
              IDENT "x"
            WHITESPACE " "
            R_ANGLE ">"
            WHITESPACE " "
            NAME_REF
              IDENT "b"
          R_PAREN ")"
          WHITESPACE " "
          NO_INHERIT
            NO_KW "no"
            WHITESPACE " "
            INHERIT_KW "inherit"
        WHITESPACE "\n    "
        DEFAULT_CONSTRAINT
          DEFAULT_KW "default"
          WHITESPACE " "
          BIN_EXPR
            LITERAL
              INT_NUMBER "10"
            WHITESPACE " "
            STAR "*"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "2"
        WHITESPACE "\n    "
        GENERATED_CONSTRAINT
          GENERATED_KW "generated"
          WHITESPACE " "
          GENERATED_STORED
            GENERATED_ALWAYS
              ALWAYS_KW "always"
            WHITESPACE " "
            AS_KW "as"
            WHITESPACE " "
            L_PAREN "("
            BIN_EXPR
              NAME_REF
                IDENT "x"
              WHITESPACE " "
              PLUS "+"
              WHITESPACE " "
              LITERAL
                INT_NUMBER "2"
            R_PAREN ")"
            WHITESPACE " "
            STORED
              STORED_KW "stored"
      COMMA ","
      WHITESPACE "\n  "
      CHECK_CONSTRAINT
        CONSTRAINT_NAME_CLAUSE
          CONSTRAINT_KW "constraint"
          WHITESPACE " "
          CONSTRAINT_NAME
            IDENT "fooo"
        WHITESPACE "\n    "
        CHECK_KW "check"
        WHITESPACE " "
        L_PAREN "("
        BIN_EXPR
          NAME_REF
            IDENT "a"
          WHITESPACE " "
          R_ANGLE ">"
          WHITESPACE " "
          NAME_REF
            IDENT "b"
        R_PAREN ")"
      WHITESPACE "\n"
      R_PAREN ")"
    WHITESPACE "\n  "
    INHERITS
      INHERITS_KW "inherits"
      WHITESPACE " "
      L_PAREN "("
      TABLE_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "bar"
      COMMA ","
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "bar"
      R_PAREN ")"
    WHITESPACE "\n  "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    WHITESPACE "\n  "
    ALTER_OPTION_LIST
      OPTIONS_KW "options"
      WHITESPACE " "
      L_PAREN "("
      ADD_FOREIGN_OPTION
        FOREIGN_OPTION_NAME
          IDENT "a"
        WHITESPACE " "
        LITERAL
          STRING "'b'"
      COMMA ","
      WHITESPACE " "
      ADD_FOREIGN_OPTION
        FOREIGN_OPTION_NAME
          IDENT "c"
        WHITESPACE " "
        LITERAL
          STRING "'d'"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- partitioned_simple"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_SEGMENT
          IDENT "t"
    WHITESPACE " \n  "
    PARTITION_OF
      PARTITION_KW "partition"
      WHITESPACE " "
      OF_KW "of"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "u"
    WHITESPACE "\n    "
    PARTITION_DEFAULT
      DEFAULT_KW "default"
    WHITESPACE "\n    "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- partitioned"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_NOT_EXISTS
      IF_KW "if"
      WHITESPACE " "
      NOT_KW "not"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_SEGMENT
          IDENT "t"
    WHITESPACE " \n  "
    PARTITION_OF
      PARTITION_KW "partition"
      WHITESPACE " "
      OF_KW "of"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "u"
    TABLE_ARG_LIST
      L_PAREN "("
      WHITESPACE "\n    "
      COLUMN
        COLUMN_NAME
          IDENT "a"
        WHITESPACE " "
        WITH_OPTIONS
          WITH_KW "with"
          WHITESPACE " "
          OPTIONS_KW "options"
        WHITESPACE " "
        NOT_NULL_CONSTRAINT
          NOT_KW "not"
          WHITESPACE " "
          NULL_KW "null"
        WHITESPACE " "
        CHECK_CONSTRAINT
          CHECK_KW "check"
          WHITESPACE " "
          L_PAREN "("
          BIN_EXPR
            NAME_REF
              IDENT "a"
            WHITESPACE " "
            R_ANGLE ">"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "10"
          R_PAREN ")"
      COMMA ","
      WHITESPACE "\n    "
      COLUMN
        COLUMN_NAME
          IDENT "b"
        WHITESPACE " "
        NULL_CONSTRAINT
          NULL_KW "null"
        WHITESPACE " "
        DEFAULT_CONSTRAINT
          DEFAULT_KW "default"
          WHITESPACE " "
          LITERAL
            STRING "'foo'"
      COMMA ","
      WHITESPACE "\n    "
      CHECK_CONSTRAINT
        CHECK_KW "check"
        WHITESPACE " "
        L_PAREN "("
        BIN_EXPR
          NAME_REF
            IDENT "a"
          WHITESPACE " "
          R_ANGLE ">"
          WHITESPACE " "
          NAME_REF
            IDENT "b"
        R_PAREN ")"
      WHITESPACE "\n  "
      R_PAREN ")"
    WHITESPACE "\n    "
    PARTITION_DEFAULT
      DEFAULT_KW "default"
    WHITESPACE "\n    "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    WHITESPACE "\n    "
    ALTER_OPTION_LIST
      OPTIONS_KW "options"
      WHITESPACE " "
      L_PAREN "("
      ADD_FOREIGN_OPTION
        FOREIGN_OPTION_NAME
          IDENT "a"
        WHITESPACE " "
        LITERAL
          STRING "'b'"
      COMMA ","
      WHITESPACE " "
      ADD_FOREIGN_OPTION
        FOREIGN_OPTION_NAME
          IDENT "c"
        WHITESPACE " "
        LITERAL
          STRING "'d'"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- partitioned_bound_spec_in"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_NOT_EXISTS
      IF_KW "if"
      WHITESPACE " "
      NOT_KW "not"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_SEGMENT
          IDENT "t"
    WHITESPACE " \n  "
    PARTITION_OF
      PARTITION_KW "partition"
      WHITESPACE " "
      OF_KW "of"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "u"
    TABLE_ARG_LIST
      L_PAREN "("
      WHITESPACE "\n    "
      COLUMN
        COLUMN_NAME
          IDENT "a"
      WHITESPACE "\n  "
      R_PAREN ")"
    WHITESPACE "\n    "
    PARTITION_FOR_VALUES_IN
      FOR_KW "for"
      WHITESPACE " "
      VALUES_KW "values"
      WHITESPACE " "
      IN_KW "in"
      WHITESPACE " "
      L_PAREN "("
      BIN_EXPR
        NAME_REF
          IDENT "a"
        WHITESPACE " "
        R_ANGLE ">"
        WHITESPACE " "
        NAME_REF
          IDENT "b"
      R_PAREN ")"
    WHITESPACE "\n    "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- partitioned_bound_spec_from"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_NOT_EXISTS
      IF_KW "if"
      WHITESPACE " "
      NOT_KW "not"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_SEGMENT
          IDENT "t"
    WHITESPACE " \n  "
    PARTITION_OF
      PARTITION_KW "partition"
      WHITESPACE " "
      OF_KW "of"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "u"
    TABLE_ARG_LIST
      L_PAREN "("
      WHITESPACE "\n    "
      COLUMN
        COLUMN_NAME
          IDENT "a"
      WHITESPACE "\n  "
      R_PAREN ")"
    WHITESPACE "\n    "
    PARTITION_FOR_VALUES_FROM
      FOR_KW "for"
      WHITESPACE " "
      VALUES_KW "values"
      WHITESPACE " "
      FROM_KW "from"
      WHITESPACE " "
      PARTITION_FROM_VALUES
        L_PAREN "("
        BIN_EXPR
          NAME_REF
            IDENT "a"
          WHITESPACE " "
          R_ANGLE ">"
          WHITESPACE " "
          NAME_REF
            IDENT "b"
        COMMA ","
        WHITESPACE " "
        NAME_REF
          MINVALUE_KW "minvalue"
        COMMA ","
        WHITESPACE " "
        NAME_REF
          MAXVALUE_KW "maxvalue"
        R_PAREN ")"
      WHITESPACE " \n      "
      TO_KW "to"
      WHITESPACE " "
      PARTITION_TO_VALUES
        L_PAREN "("
        NAME_REF
          MAXVALUE_KW "maxvalue"
        COMMA ","
        WHITESPACE " "
        NAME_REF
          MINVALUE_KW "minvalue"
        R_PAREN ")"
    WHITESPACE "\n    "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- partitioned_bound_spec_with"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_NOT_EXISTS
      IF_KW "if"
      WHITESPACE " "
      NOT_KW "not"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_SEGMENT
          IDENT "t"
    WHITESPACE " \n  "
    PARTITION_OF
      PARTITION_KW "partition"
      WHITESPACE " "
      OF_KW "of"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "u"
    TABLE_ARG_LIST
      L_PAREN "("
      WHITESPACE "\n    "
      COLUMN
        COLUMN_NAME
          IDENT "a"
      WHITESPACE "\n  "
      R_PAREN ")"
    WHITESPACE "\n    "
    PARTITION_FOR_VALUES_WITH
      FOR_KW "for"
      WHITESPACE " "
      VALUES_KW "values"
      WHITESPACE " "
      WITH_KW "with"
      WHITESPACE " "
      L_PAREN "("
      HASH_PARTITION_BOUND
        IDENT "modulus"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "10"
      COMMA ","
      WHITESPACE " "
      HASH_PARTITION_BOUND
        IDENT "remainder"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "2"
      R_PAREN ")"
    WHITESPACE "\n    "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with schema"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "cal"
        DOT "."
        PATH_SEGMENT
          IDENT "event_types"
    WHITESPACE " "
    TABLE_ARG_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      COLUMN
        COLUMN_NAME
          IDENT "attrs"
        WHITESPACE " "
        PATH_TYPE
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "jsonb"
      WHITESPACE "\n"
      R_PAREN ")"
    WHITESPACE "\n  "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "cal_server"
    WHITESPACE "\n  "
    ALTER_OPTION_LIST
      OPTIONS_KW "options"
      WHITESPACE " "
      L_PAREN "("
      WHITESPACE "\n    "
      ADD_FOREIGN_OPTION
        FOREIGN_OPTION_NAME
          OBJECT_KW "object"
        WHITESPACE " "
        LITERAL
          STRING "'event-types'"
      WHITESPACE "\n  "
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- like clause is >=pg18"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_SEGMENT
          IDENT "u"
    WHITESPACE " "
    TABLE_ARG_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      LIKE_CLAUSE
        LIKE_KW "like"
        WHITESPACE " "
        RELATION_NAME_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "t"
      WHITESPACE "\n"
      R_PAREN ")"
    WHITESPACE " "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- like clause is >=pg18"
  WHITESPACE "\n"
  CREATE_FOREIGN_TABLE
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME
      PATH
        PATH_SEGMENT
          IDENT "remote_users"
    WHITESPACE " "
    TABLE_ARG_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      LIKE_CLAUSE
        LIKE_KW "like"
        WHITESPACE " "
        RELATION_NAME_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "local_users"
        WHITESPACE "\n    "
        INCLUDING_PROPERTY
          INCLUDING_KW "including"
          WHITESPACE " "
          PROPERTY_DEFAULTS
            DEFAULTS_KW "defaults"
        WHITESPACE "\n    "
        INCLUDING_PROPERTY
          INCLUDING_KW "including"
          WHITESPACE " "
          PROPERTY_CONSTRAINTS
            CONSTRAINTS_KW "constraints"
        WHITESPACE "\n    "
        EXCLUDING_PROPERTY
          EXCLUDING_KW "excluding"
          WHITESPACE " "
          PROPERTY_GENERATED
            GENERATED_KW "generated"
        WHITESPACE "\n    "
        EXCLUDING_PROPERTY
          EXCLUDING_KW "excluding"
          WHITESPACE " "
          PROPERTY_STATISTICS
            STATISTICS_KW "statistics"
        WHITESPACE "\n    "
        EXCLUDING_PROPERTY
          EXCLUDING_KW "excluding"
          WHITESPACE " "
          PROPERTY_ALL
            ALL_KW "all"
      WHITESPACE "\n"
      R_PAREN ")"
    WHITESPACE " "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "remote_server"
    SEMICOLON ";"
  WHITESPACE "\n\n"
